--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
-    "DevConnection" :  "Server=(local)\\sqlexpress; Database=PaymentDetailDB; Trusted_Connection=True; MultipleActiveResultSets=True;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB; Database=PaymentDetailDB; Trusted_Connection=True; MultipleActiveResultSets=True;"
   }
 }
